--- a/src/Sass/styles.scss
+++ b/src/Sass/styles.scss
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
 @tailwind base;
@@ -11,7 +10,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Outfit', sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 html,
@@ -21,18 +20,20 @@ body {
   overflow-x: hidden;
   overflow-y: auto;
   scroll-behavior: smooth;
-  font-family: 'Inter', sans-serif;
   background: $background;
+  color: $white;
 }
 
 #root {
   min-height: 100vh;
   width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
-// input:focus-within {
-//   text-decoration: underline;
-// }
+input:focus-within {
+  border-bottom: 1px solid $iconNavLinks;
+}
 
 .icon-nav:hover {
   fill: $iconNavLinks;
@@ -40,5 +41,36 @@ body {
 }
 
 a.active svg.icon-nav {
-  fill: white;
+  fill: $white;
+}
+
+.trending-movies-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1rem;
+}
+
+.movies-container {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+@media (min-width: 976px) {
+  .trending-movies-container {
+    grid-template-columns: repeat(4, 1fr);
+    gap: 3rem;
+  }
+
+  .movies-container {
+    grid-template-columns: repeat(3, 1fr);
+
+    & > :nth-child(4) {
+      grid-column: 1/3;
+    }
+
+    & > :last-child {
+      grid-column: 2/4;
+      grid-row-start: 3;
+    }
+  }
 }
