--- a/src/Sass/styles.scss
+++ b/src/Sass/styles.scss
@@ -24,6 +24,29 @@ body {
   color: $white;
 }
 
+// custom scroll bar
+
+// width
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+// Track
+::-webkit-scrollbar-track {
+  background: $white;
+}
+
+// handle
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 50px;
+}
+
+// handle on hover
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 #root {
   min-height: 100vh;
   width: 100%;
@@ -46,7 +69,8 @@ a.active svg.icon-nav {
 
 .trending-movies-container {
   display: grid;
-  grid-template-columns: 1fr;
+  // grid-template-columns: 1fr;
+  grid-template-columns: repeat(10, 1fr);
   gap: 1rem;
 }
 
@@ -55,22 +79,24 @@ a.active svg.icon-nav {
   grid-template-columns: 1fr;
 }
 
-@media (min-width: 976px) {
+@media (min-width: 768px) {
   .trending-movies-container {
-    grid-template-columns: repeat(4, 1fr);
-    gap: 3rem;
+    // grid-template-columns: repeat(10, 1fr);
+    gap: 2rem;
   }
 
   .movies-container {
-    grid-template-columns: repeat(3, 1fr);
-
-    & > :nth-child(4) {
-      grid-column: 1/3;
-    }
-
-    & > :last-child {
-      grid-column: 2/4;
-      grid-row-start: 3;
-    }
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
   }
+}
+
+@media (min-width: 978px) {
+  .movies-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+.card_element img {
+  object-fit: cover;
 }
