--- a/src/Sass/styles.scss
+++ b/src/Sass/styles.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -10,7 +11,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Inter', sans-serif;
+  // font-family: 'Inter', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 html,
@@ -131,4 +133,62 @@ a.active svg.icon-nav {
 
 .card_element img {
   object-fit: cover;
+}
+
+.moviesGenreContainer {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1rem;
+
+  > :nth-child(even) {
+    background: $cardGenres;
+  }
+
+  > :nth-child(odd) {
+    background: $nav;
+  }
+}
+
+.tvGenreContainer {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1rem;
+
+  > :nth-child(even) {
+    background: $nav;
+  }
+
+  > :nth-child(odd) {
+    background: $cardGenres;
+  }
+}
+
+.moviesGenreContainer > *:hover,
+.tvGenreContainer > *:hover {
+  scale: 1.02;
+  transition: scale 500ms ease;
+}
+
+@media (min-width: 768px) {
+  .moviesGenreContainer,
+  .tvGenreContainer {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (min-width: 1240px) {
+  .moviesGenreContainer,
+  .tvGenreContainer {
+    grid-template-columns: repeat(7, 1fr);
+
+    > :last-child {
+      grid-column: 5/8;
+    }
+  }
+
+  .tvGenreContainer {
+    > :nth-last-child(2) {
+      grid-column: 1/5;
+    }
+  }
 }
