--- a/src/Sass/styles.scss
+++ b/src/Sass/styles.scss
@@ -1,5 +1,4 @@
-// @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -11,8 +10,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  // font-family: 'Inter', sans-serif;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 html,
