--- a/src/Sass/styles.scss
+++ b/src/Sass/styles.scss
@@ -201,5 +201,20 @@ a.active svg.icon-nav {
 
 .genreMovie {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  // grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: 1fr;
+  gap: 1rem;
+}
+
+@media (min-width: 768px) {
+  .genreMovie {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+  }
+}
+
+@media (min-width: 1240px) {
+  .genreMovie {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
