--- a/src/Sass/styles.scss
+++ b/src/Sass/styles.scss
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap");
-@import "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css";
 
 @tailwind base;
 @tailwind components;
@@ -202,7 +201,6 @@ a.active svg.icon-nav {
 
 .genreMovie {
   display: grid;
-  // grid-template-columns: repeat(4, 1fr);
   grid-template-columns: 1fr;
   gap: 1rem;
 }
@@ -217,5 +215,42 @@ a.active svg.icon-nav {
 @media (min-width: 1240px) {
   .genreMovie {
     grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+.pagination {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: $nav;
+  padding: 5px 10px;
+  border-radius: 8px;
+  margin-block: 20px;
+  max-width: 500px;
+  margin-inline: auto;
+
+  .page-item {
+    // cursor: pointer;
+    padding: 4px 7px;
+    border-radius: 3px;
+
+    &:hover {
+      background: gray;
+    }
+  }
+
+  .active {
+    background: $iconNavLinks;
+  }
+
+  .disabled {
+    color: #999999;
+    cursor: not-allowed;
+  }
+}
+
+@media (min-width: 768px) {
+  .page-item {
+    padding: 5px 10px;
   }
 }
