--- a/src/Sass/styles.scss
+++ b/src/Sass/styles.scss
@@ -259,7 +259,7 @@ a.active svg.icon-nav {
   }
 }
 
-.link:hover .overlay {
-  height: 0 !important;
-  transition: height 1000ms ease;
+.link:hover {
+  width: 600px;
+  transition: width 500ms ease;
 }
